Adapt Java classes and XSLT to changes